<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".News"
    android:background="@color/white">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/NavigationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:theme="@style/Theme.MyApplication"
        android:visibility="visible"
        app:itemIconTint="@drawable/button_nav_selector"
        app:itemTextColor="@color/text_color"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation" />

    <RelativeLayout
        android:id="@+id/layout_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/NavigationButton"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="46dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="58dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="41dp"
            android:layout_centerVertical="true"
            android:text="@string/title"
            android:textAppearance="@style/title"
            android:lineSpacingExtra="1sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto"
            />

        <RelativeLayout
            android:id="@+id/progress_bar"
            android:visibility="visible"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_list"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="#FFFFFF"
            tools:listitem="@layout/news_item"
            android:layout_marginTop="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="17dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_training"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>